--- a/src/containers/nav/nav.less
+++ b/src/containers/nav/nav.less
@@ -1,6 +1,114 @@
-.aaa {
-	width: 100px;
-	height: 100px;
-	background: url(../../img/lieyunlogo.png) center no-repeat;
-	background-size: 50px;
+@import '../../gbstyle/variable.less';
+.logo {
+	line-height: 55px;
+	&-img {
+		height: 35px;
+	}
+}
+
+.nav-btn-group {
+	padding: 14px 0;
+	margin-right: 30px;
+	.btn-nav {
+		border: 1px solid @linkcolor;
+		color: @linkcolor;
+		background: #ebf2f9;
+		border-radius: 2px;
+		padding: 0 10px;
+		line-height: 25px;
+		margin-right: 20px;
+		&:last-child {
+			margin-right: 0;
+		}
+		&:hover {
+			background: @linkcolor;
+			color: #fff;
+		}
+		.glyphicon {
+			margin-right: 5px;
+		}
+	}
+}
+
+.not-logged-in {
+	line-height: 55px;
+}
+
+.user-avatar-box {
+	display: block;
+	line-height: 55px;
+	.user-avatar {
+		width: 32px;
+		height: 32px;
+		border-radius: 50%;
+	}
+	.unread {
+		position: absolute;
+		top: 10px;
+		right: -15px;
+		line-height: normal;
+		background-color: #ff4f4d;
+		border-radius: 100px;
+		padding: 0 6px;
+		color: #fff;
+		font-size: 12px;
+	}
+}
+
+.logged-in {
+	&:hover {
+		.user-nav {
+			visibility: visible;
+			opacity: 1;
+		}
+	}
+	.user-nav {
+		visibility: hidden;
+		opacity: 0;
+		position: absolute;
+		right: 0;
+		width: 150px;
+		padding: 10px;
+		list-style: none;
+		background-color: #fff;
+		box-shadow: 0 5px 6px rgba(0,0,0,.05);
+		transition: opacity, visibility .2s ease-in-out;
+		.user-nav-bar {
+			line-height: 40px;
+			border-bottom: 1px solid rgba(0,0,0,.05);
+			&:last-child {
+				border-bottom: none;
+			}
+		}
+		.user-nav-itme {
+			display: block;
+			text-align: center;
+			font-size: 15px;
+			overflow: hidden;
+			white-space: nowrap;
+			text-overflow: ellipsis;
+		}
+	}
+}
+
+.nav-bottom {
+	height: 35px;
+	background-color: @bgcolor;
+}
+
+.nav-list {
+	list-style: none;
+	padding-left: 0;
+	.nav-list-bar {
+		float: left;
+		margin-right: 50px;
+	}
+	.nav-list-itme {
+		line-height: 35px;
+		font-size: 15px;
+		color: #666;
+		&:hover {
+			color: @linkcolor;
+		}
+	}
 }
